<resources>
    <string name="app_name">B3</string>
    <string name="agora_app_id" translatable="false">"7302962a4ae04fdebe739b889a6f5457"</string>
    <string name="places_api_key">AIzaSyAd4ZzHfi-nAp-6IAm1YF5-pVxCAlzW4EA</string>
    <string name="default_notification_channel_id">com.nauatili</string>
    <string name="default_notification_channel_name">Call</string>
    <string name="sign_in_to_continue">SIGN IN TO CONTINUE</string>
    <string name="email">EMAIL</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="or">OR</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="new_user">NEW USER ? </string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_question_mark">FORGOT PASSWORD?</string>
    <string name="recover_your_password">RECOVER YOUR PASSWORD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_big">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="permission_rationale">Permission is needed for functionality</string>
    <string name="select_photo">Select Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert!!!</string>
    <string name="ok">OK</string>
    <string name="openSettings">Open Settings</string>
    <string name="permissionRequired">Required camera and storage permission to access this functionality.</string>
    <string name="info">INFO</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="business_category">Business Category</string>
    <string name="experience">Experience</string>
    <string name="years_in_business">Years In Business</string>
    <string name="location">Location</string>
    <string name="availability">Set Availability</string>
    <string name="_availability">Availability</string>
    <string name="website_link">Website Link</string>
    <string name="is_your_business_black_owned">Is your business black owned?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_me">About Me</string>
    <string name="upload_video">Upload Video</string>
    <string name="set">Set</string>
    <string name="upload_images">Upload Images</string>
    <string name="submit">Submit</string>
    <string name="home">HOME</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="my_bookings">MY BOOKINGS</string>
    <string name="messages">MESSAGES</string>
    <string name="my_loops">MY LOOPS</string>
    <string name="promote_your_business">PROMOTE YOUR BUSINESS</string>
    <string name="promote_your_events">PROMOTE YOUR EVENTS</string>
    <string name="timeline">TIMELINE</string>
    <string name="refer_a_friend">REFER A FRIEND</string>
    <string name="event_calendar">EVENT CALENDAR</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="heading">Heading</string>
    <string name="search">Search....</string>
    <string name="arizona_usa">Arizona,USA</string>
    <string name="john">John</string>
    <string name="about">About</string>
    <string name="_3_year">3 Year</string>
    <string name="www_google_com">www.google.com</string>
    <string name="check_availability">Check Availability</string>
    <string name="loop">Loop</string>
    <string name="cancel_loop_request">Cancel Loop Request</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="your_loop_request_has_been_sent">Your loop request has been sent</string>
    <string name="loop_request_cancelled_successfully">Loop request cancelled successfully</string>
    <string name="sat_5_jan_may_8_00_am">sat. 5 Jan May. 8:00 AM</string>
    <string name="link">Link:</string>
    <string name="https_www_google_com">https://www.google.com/</string>
    <string name="description">Description</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="user_name">USER NAME</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="rsvp_link">RSVP Link</string>
    <string name="write_here">Write Here...</string>
    <string name="more_info">More Info</string>
    <string name="delete_this_event">Are you sure want to delete this event</string>
    <string name="logout_dialog">Are you sure you want to logout?</string>
    <string name="delete_this_post">Are you sure want to delete this Post?</string>
    <string name="status">Status</string>
    <string name="are_you_sure_want_to_cancel_the_request">Are you sure want to cancel the request</string>
    <string name="next">Next</string>
    <string name="new_group">New Group</string>
    <string name="participants">Participants:</string>
    <string name="new_group_name_here">New group name here</string>
    <string name="click_camera_icon_to_add_an_icon_to_the_group">Click camera icon to add an icon to the group</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="book_now">Book Now</string>
    <string name="clear_chat">Clear chat</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="are_you_sure_want_to_block_john">Are you sure want to block</string>
    <string name="are_you_sure_want_to_cancel_loop">Are you sure want to cancel loop Request</string>
    <string name="are_you_sure_want_to_cancel_booking">Are you sure want to cancel booking Request</string>
    <string name="unblock_john">Are you sure want to unblock John</string>
    <string name="why_do_you_want_to_report_this_user">Why do you want to report this user?</string>
    <string name="unloop">UNLOOP</string>
    <string name="are_you_sure_want_to_unloop_robert_pattinson">Are you sure want to unloop </string>
    <string name="pay">Pay</string>
    <string name="total_payable">Total Payable</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="payment_details">Payment Details</string>
    <string name="order_date">Order Date: 15.01.2021</string>
    <string name="you_have_selected_5_a_day_to_promote_your_service">You have selected $5 a day to Promote your service...</string>
    <string name="promote_detail">Promote Detail</string>
    <string name="payment">Payment</string>
    <string name="add_new">Add New</string>
    <string name="you_have_successfully_promoted_your_service">You have successfully promoted your service</string>
    <string name="done">Done</string>
    <string name="add_new_card">Add new Card</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp. Date</string>
    <string name="cvv">CVV Number</string>
    <string name="add_post">Add Post</string>
    <string name="post">Post</string>
    <string name="you_can_earn_more_rewards">You can earn more rewards by referring your friends to Binty\'s Black Book. Send them your referral code(.</string>
    <string name="invite_friend">Invite friend</string>
    <string name="calendar">Calendar</string>
    <string name="my_wallet">My Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="dollar_sign">$</string>
    <string name="notifications">Notifications</string>
    <string name="set_availability">Set Availability</string>
    <string name="select_time">Select Time</string>
    <string name="comments">Comments</string>
    <string name="type_comments">Type Comments...</string>
    <string name="please_enter_a_valid_email_address">Please Enter a valid email Address. we will send you an email for confirmation.</string>
    <string name="booking_request">Booking Request</string>
    <string name="chat">Chat</string>
    <string name="internet_connection">Internet Connection seems to be offline. Please check you Internet Connectivity.</string>
    <string name="err_email" translatable="false"> Please enter email address.</string>
    <string name="err_valid_email_address" translatable="false">Please enter valid email address.</string>
    <string name="err_phone" translatable="false"> Please enter phone number.</string>
    <string name="err_valid_phone" translatable="false"> Please enter valid phone number.</string>
    <string name="validPass">Password must be of minimum 8 characters</string>
    <string name="err_user_name">Please enter user name</string>
    <string name="err_business_name">Please enter business name</string>
    <string name="business_name">Business Name</string>
    <string name="err_old_pass">Please enter your old password</string>
    <string name="err_new_pass">Please enter new password</string>
    <string name="pass_does_not_match">Password does not match</string>
    <string name="promo_code">Referred by a Friend/ Have a Promo Code? Add here</string>
    <string name="service_type">What Service Do You Provide?</string>
    <string name="hours_and_days_of_operation">Hours And Days Of operation</string>
    <string name="social_media_handle">Social Media Handle</string>
    <string name="open_to_the_swap_system">Open To The Swap System?</string>
    <string name="swaps_in_mind">Swaps In Mind?</string>
    <string name="about_the_business">About The Business</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="err_add_desc">Please add description</string>
    <string name="err_experience">Please enter your experience</string>
    <string name="err_location">Please enter location</string>
    <string name="err_social_media">Please enter social media</string>
    <string name="err_website_link">Please enter your website link</string>
    <string name="select_category">Select Category</string>
    <string name="select_all">Select All</string>
    <string name="set_availability_for_booking_requests">Set Availability for \n\n booking requests</string>
    <string name="tell_us_about_business">Tell Us About Your Business</string>
    <string name="suggestions">Suggestions</string>
    <string name="no_loop_found">No Loop Found</string>
    <string name="directory">DIRECTORY</string>
    <string name="hey_cosmopolite_how_can_we_help_you">Hey Cosmopolite. \n\n How can we help you?</string>
    <string name="open_to_swap">Open to swap system</string>
</resources>