<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_menu_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dots"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:fontFamily="@font/trajanpro_bold"
        android:padding="@dimen/dp10"
        android:text="@string/clear_chat"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/sp13" />

    <TextView
        android:id="@+id/tvBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:fontFamily="@font/trajanpro_bold"
        android:padding="@dimen/dp10"
        android:text="@string/block"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/sp13" />

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:fontFamily="@font/trajanpro_bold"
        android:padding="@dimen/dp10"
        android:text="@string/report"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/sp13" />
</LinearLayout>
